...
                    .scrollContentBackground(.hidden)
                    
                    Spacer()
                    resetButton
                }
            }
            .navigationTitle("Select Colors for Classes")
            .onAppear { vm.initializeColors(from: subjects) }
        }
    }
}

// MARK: VARIABLES 
...
